--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,13 +1,15 @@
-$color-background: #666;
+$color-background: #303032;
 
-$color-navigation-bar-background: #333;
+$color-navigation-bar-background: #ff8d00;
 $color-navigation-bar-border: #000;
 
-$color-user-data-text: #CCC;
+$color-user-data-text: #0c0000;
+
+$color-search-background: #b15900;
 
 $color-go-to-back: #CCC;
 
-$color-window-background: #333;
+$color-window-background: #ff8d00;
 $color-window-border: #000;
 
 $color-alert-item-text: #000;
