--- a/src/styles/search.scss
+++ b/src/styles/search.scss
@@ -2,5 +2,5 @@
 
 .search__input {
   border: 2px solid $color-navigation-bar-border;
-  background-color: $color-background;
+  background-color: $color-search-background;
 }
